修改配置文件数据和readme

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,5 +1,5 @@
 ;url cqhttp地址和端口   group_id QQ群号   cron 自动模板
 [common]
-url = "http://127.0.0.1:5700/"
-group_id = "540513551"
+url = ""
+group_id = ""
 cron = "10 0/3 * * *"
