--- a/config/config.ini
+++ b/config/config.ini
@@ -1,5 +1,5 @@
 ;url cqhttp地址和端口   group_id QQ群号   cron 自动模板
 [common]
-url = ""
-group_id = ""
+url = "127.0.0.1:5700"
+group_id = "540513551"
 cron = "10 0/3 * * *"
